force-app/main/default/objects/Finances__c/Finances__c.object-meta.xml
<CustomObject>
    <label>Finances</label>
    <nameField>
        <label>Price Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Finances</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>