force-app/main/default/objects/Finances__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initial Exploration</fullName>
            </value>
            <value>
                <fullName>Small Ops</fullName>
            </value>
            <value>
                <fullName>Medium Ops</fullName>
            </value>
            <value>
                <fullName>Large Ops</fullName>
            </value>
            <value>
                <fullName>Depleted Ops</fullName>
            </value>
            <value>
                <fullName>Final Ops</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>