force-app/main/default/objects/Finances__c/fields/Trading_Price__c.field-meta.xml
<CustomField>
    <fullName>Trading_Price__c</fullName>
    <label>Trading Price</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>